# LearnCmake

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  README.md
include/: sqr.h
scripts/: cmake_build_all.sh  cmake_build_tests.sh  install_cmake.sh
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
